# lightex

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
contrib/boost_1_68_0/: CMakeLists.txt
lightex/: CMakeLists.txt  workspace.cc  workspace.h
lightex/ast/: ast.h  ast_adapted.h
lightex/binaries/: parse_program_to_html.cc
lightex/dot_converter/: dot_visitor.cc
lightex/grammar/: grammar.h
lightex/html_converter/: html_visitor.cc  html_visitor.h
lightex/pymod/: cpython.h  extension.cc  extension.h  pylightex.cc
lightex/styles/: CMakeLists.txt  lightex.sty
lightex/tests/: main.cc
lightex/tests/canon/data/: inversion.canon.html  misc.canon.html  spanning-tree.canon.html
lightex/tests/canon/data/static/: lightex.css
lightex/utils/: utf32.cc  utf32.h
lightex2/: CMakeLists.txt
lightex2/parser/: ast.h  ast_adapted.cc  ast_adapted.h  grammar.cc  grammar.h  string.h
lightex2/printer/: debug_printer.cc  debug_printer.h
lightex2/tests/: common.cc  common.h  main.cc  math.cc  olymp.cc  sectioning.cc
tests/canon/: run.py
tests/canon/data/: inversion.tex  isomorph.canon.html  isomorph.tex  misc.tex  shooting.canon.html  shooting.tex  spanning-tree.tex  trees-1.canon.html  trees-1.tex
tests/canon/data/static/: lightex.css  olymp.sty  template.html
tools/: CMakeLists.txt
tools/rescompiler/: CMakeLists.txt  rescompiler.c
util/: CMakeLists.txt  string.cpp  string.h
